// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSortFieldType creates enum field with camel cased values: %S 1`] = `
{
  "astNode": undefined,
  "description": undefined,
  "extensionASTNodes": [],
  "extensions": {},
  "name": "EntityName_Sort_Field",
  "values": {
    "lastName": {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": {},
      "value": "last_name",
    },
    "name": {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": {},
      "value": "name",
    },
  },
}
`;

exports[`createSortFieldType creates enum field with camel cased values: %S 2`] = `
{
  "astNode": undefined,
  "description": undefined,
  "extensionASTNodes": [],
  "extensions": {},
  "name": "EntityName_Sort_Field",
  "values": {
    "createdAt": {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": {},
      "value": "createdAt",
    },
    "firstName": {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": {},
      "value": "first_name",
    },
    "id": {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": {},
      "value": "id",
    },
    "updatedAt": {
      "astNode": undefined,
      "deprecationReason": undefined,
      "description": undefined,
      "extensions": {},
      "value": "updatedAt",
    },
  },
}
`;

exports[`createSortFieldType fails if sortable fields is empty array 1`] = `"Assertion failed. Must be not an empty array"`;
